Finished 3-d day, added h2 for integrating tests